kuberesources/ingressWebCookiePersistence.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: SESSIONCOOKIE
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
  name: myweb-ingress
spec:
  rules:
    - host: mykubeapp.azure.tomaskubica.cz
      http:
        paths:
          - path: /
            backend:
              serviceName: myweb-service
              servicePort: 80
  tls:
      - hosts:
        - mykubeapp.azure.tomaskubica.cz
        secretName: tls-secret
